# bank-fraud-detection-project

./: .cursorrules  .geminirules  .gitignore  README.md  data_science_showcase_strategy.md
bank-fraud-detection-project/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  environment.yml  pyproject.toml
bank-fraud-detection-project/bank_fraud/: __init__.py  config.py  dataset.py  features.py  plots.py
bank-fraud-detection-project/bank_fraud/modeling/: predict.py  train.py
bank-fraud-detection-project/docs/: eda_checklist.md  mkdocs.yml
bank-fraud-detection-project/docs/docs/: index.md
bank-fraud-detection-project/models/: best_xgb_aucpr_model.joblib  best_xgb_precision_model.joblib  random_search_stage1_aucpr_model.joblib  random_search_stage1_precision_model.joblib  random_search_stage2_aucpr_model.joblib
bank-fraud-detection-project/notebooks/: 1.0-mjv-data-ingestion-and-anonymization.ipynb  1.0-mjv-initial-data-exploration.ipynb  2.0-mjv-data-preparation.ipynb  3.0-mjv-feature-selection-and-eda.ipynb  4.0-mjv-eda-final-features.ipynb  5.0-mjv-model-training-and-evaluation.ipynb  6.0-mjv-network-analysis.ipynb  6.0-mjv-network-analysis.py  _02_Pre_cleaning.py
bank-fraud-detection-project/references/: all_numerical_correlation_pairs.csv  categorical_data_dictionary.csv  categorical_iv_details.csv  categorical_iv_details.xlsx  highly_correlated_feature_pairs.csv  identifier_data_dictionary.csv  iv_details_processed.xlsx  numeric_data_dictionary.csv  numerical_binning_rules.csv  numerical_correlation_matrix.csv  numerical_iv_details.csv
(+150 files in other folders)
